[project]
name = "oss-stats"
version = "0.1.0"
authors = [
{ name="Josh Holman", email="git@jolman.me"},
]
description = "A Python CLI tool to fetch GitHub stats from acmcsufoss"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "alive-progress>=3.2.0",
    "click>=8.1.7",
    "pygithub>=2.4.0",
    "python-dotenv>=1.0.1",
    "questionary>=2.1.0",
    "rich>=13.9.3",
    "platformdirs>=4.9.6",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
    "twine>=6.2.0",
]

[project.scripts]
oss-stats = "oss_stats.cli:cli"

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/acmcsufoss/oss-stats"
Issues = "https://github.com/acmcsufoss/oss-stats/issues"
